# resume-terminal

./: .gitignore  ADDITIONAL_FEATURES.md  Dockerfile.auto  Dockerfile.client  Dockerfile.server  PROPOSAL.md  README.md  autorun.sh  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
.history/client/: run_client_20250320181459.sh  tsconfig_20250320185100.json
.history/client/src/: app_20250320175706.ts  app_20250320184816.ts  styles_20250320185033.css
.history/server/: package_20250320185100.json  run_server_20250320180628.sh  run_server_20250320180908.sh  run_server_20250320181840.sh  tsconfig_20250320180137.json
.history/server/src/: database_20250320185100.ts
auto_applyer/: main.py
auto_applyer/api/: server.py
auto_applyer/core/: llm_utils.py  provider.py  qa_engine.py  tracker.py
auto_applyer/data/: questions.yml
auto_applyer/providers/: greenhouse.py  indeed.py  linkedin.py
auto_applyer/templates/: cover_letter_prompt.j2  resume_prompt.j2
auto_applyer/tests/: test_llm_utils.py
client/: package.json  run_client.sh  tsconfig.json
client/src/: README.md  admin.html  admin.ts  app.ts  index.html  styles.css
server/: package.json  run_server.sh  tsconfig.json
server/src/: database.ts  declarations.d.ts  server.ts  types.ts
