[tool.poetry]
name = "auto_applyer"
version = "0.1.0"
description = "Automated job application tool"
authors = ["Auto Applyer"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9"
fastapi = "^0.110"
uvicorn = "^0.29"
openai = "^1.0"
requests = "^2.31"
beautifulsoup4 = "^4.12"
jinja2 = "^3.1"
aiosqlite = "^0.19"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
ruff = "^0.3"

[tool.pytest.ini_options]
addopts = "-ra"

[tool.ruff]
line-length = 88
